Modified the files for servo 1 control

--- a/Altera DE2-115 method/Quartus/Servo_1/servo.qsf
+++ b/Altera DE2-115 method/Quartus/Servo_1/servo.qsf
@@ -57,14 +57,12 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 set_location_assignment PIN_Y2 -to mclk
-set_location_assignment PIN_AB22 -to pwm
 set_location_assignment PIN_M23 -to toggle
 set_global_assignment -name VERILOG_FILE clock_100hz.v
 set_global_assignment -name VERILOG_FILE clock_var.v
 set_global_assignment -name QIP_FILE FIFO.qip
 set_global_assignment -name VERILOG_FILE transmitter.v
 set_global_assignment -name VERILOG_FILE baudrate.v
-set_location_assignment PIN_F17 -to servo[0]
 set_location_assignment PIN_AA22 -to Wr_en
 set_location_assignment PIN_Y23 -to Wrreq
 set_location_assignment PIN_Y24 -to Rdreq
@@ -84,5 +82,8 @@ set_location_assignment PIN_J15 -to Data_out[12]
 set_location_assignment PIN_E18 -to Data_out[5]
 set_location_assignment PIN_H16 -to Data_out[13]
 set_global_assignment -name VERILOG_FILE clock_200hz.v
-set_location_assignment PIN_AB28 -to freeze
+set_location_assignment PIN_M21 -to freeze
+set_global_assignment -name VERILOG_FILE pwm.v
+set_location_assignment PIN_F17 -to servo_dir[0]
+set_location_assignment PIN_AB22 -to PWM
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
