--- a/Altera DE2-115 method/Quartus/LFSR_32bit/Display.qsf
+++ b/Altera DE2-115 method/Quartus/LFSR_32bit/Display.qsf
@@ -89,7 +89,7 @@ set_location_assignment PIN_AF23 -to out4[5]
 set_location_assignment PIN_Y19 -to out4[6]
 set_global_assignment -name VERILOG_FILE lfsr.v
 set_location_assignment PIN_Y2 -to clk_50
-set_location_assignment PIN_AB28 -to clr
+set_location_assignment PIN_AB22 -to clr
 set_global_assignment -name VERILOG_FILE clock_1hz.v
 set_global_assignment -name QIP_FILE FIFO.qip
 set_global_assignment -name VERILOG_FILE baudrate.v
@@ -135,4 +135,7 @@ set_global_assignment -name VERILOG_FILE hexadigit5.v
 set_global_assignment -name VERILOG_FILE hexadigit6.v
 set_global_assignment -name VERILOG_FILE hexadigit7.v
 set_global_assignment -name VERILOG_FILE hexadigit8.v
+set_global_assignment -name VERILOG_FILE clk_0_25hz.v
+set_location_assignment PIN_AB28 -to select
+set_location_assignment PIN_AC15 -to clk
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
